--- a/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
@@ -25,7 +25,8 @@
     "|submission8.csv|LR3|3 Machine Learning3-2.ipynb|5-fold CV, RMSE: 12.86|14.09183||\n",
     "|submission9.csv|LR3_2|3 Machine Learning3-2.ipynb|5-fold CV, RMSE: 12.884|14.12674||\n",
     "|submission7_2.csv|LR3_2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|12.879|기존 루틴의 문제를 찾아 냈습니다: Train과 Test\n",
-    "|Submission4.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.918|11.85663|XGB2 + LGB2|\n",
+    "|Submission10.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.918|11.85663|XGB2 + LGB2|\n",
+    "|Submission11.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.916|11.852|XGB2 + LGB2 + CB1|\n",
     "에서 ELm과 GP의 결측치를 각각의 평균으로 대치했던 것이 문제였습니다.|"
    ]
   },
@@ -203,8 +204,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8118605b-66b3-4729-9d52-4ece3671a3af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████| 6.02M/6.02M [00:02<00:00, 2.53MB/s]\n",
+      "Successfully submitted to Predict Podcast Listening Time"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions submit -c playground-series-s5e4 -f result/submission11.csv -m \"11\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294eda1a-6549-49de-ad58-0cf294ba43a9",
    "metadata": {},
    "outputs": [],
    "source": []
