--- a/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/3-3.Machine Learning3.ipynb
@@ -10,16 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-28 01:22:25.992637: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-04-28 01:22:26.001208: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-04-28 21:23:07.558767: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-04-28 21:23:07.689836: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1745770946.011059  107218 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1745770946.014196  107218 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1745770946.022221  107218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1745770946.022231  107218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1745770946.022231  107218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1745770946.022232  107218 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-04-28 01:22:26.024877: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1745842987.748185     720 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1745842987.766046     720 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1745842987.882439     720 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745842987.882475     720 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745842987.882476     720 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1745842987.882476     720 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-04-28 21:23:07.894869: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8598765e-620f-44f2-bbd8-b9e17069f04a",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "  11.977008561242876])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "126b71dd-ecd1-4549-82be-dc4c036f0a7d",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "  12.009465217590332])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "1b3347a4-cc63-4285-b93c-cdebae05bbad",
    "metadata": {},
    "outputs": [],
@@ -489,15 +489,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "15162efb-8d51-4e97-a76f-d6dea6e2cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12.024958809105506,\n",
+       " [11.97769259753349,\n",
+       "  11.992119435823222,\n",
+       "  12.008359769471664,\n",
+       "  12.072927122912313,\n",
+       "  12.073695119786848])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rmse_oof, prd_oof_cb = sc.cache_result(\n",
     "    'cv_cb1', lambda : cv_tgt2(hparams, cb_adapter, use_gpu = True)\n",
     ")\n",
     "np.mean(rmse_oof), rmse_oof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "04dc6e38-ec0d-4a26-8cad-e0f3a8977ad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "792fa229ccf745bdadfd5af79c7fc817",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_tgt_train, df_tgt_test = sc.read_result('tgt_enc2')\n",
+    "result = sc.cache_result(\n",
+    "    \"cb1\", lambda : sgml.train(\n",
+    "        dproc.join_and_assign(\n",
+    "            df_train.rename(columns = {'Episode_Title': 'ET', 'Genre': 'G'}), \n",
+    "            df_tgt_train.rename(columns = lambda x: x.replace(',', '_'))\n",
+    "        ), hparams, config, cb_adapter\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -540,100 +589,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5df00268-5bd5-4f8a-b34e-7b1c6711eebf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fab4aea7e9a44c5c9b922689e19ce7fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Epoch:   0%|          | 0/30 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "618e38cb9ee24e71aa696f9f64475ce5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Step:   0%|          | 0/4219 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-28 01:29:22.790831: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_199', 112 bytes spill stores, 112 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:22.967791: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_192', 8 bytes spill stores, 8 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:22.996791: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_192', 128 bytes spill stores, 128 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:23.429184: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_199', 8 bytes spill stores, 8 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:23.662600: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_199', 12 bytes spill stores, 12 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:24.281067: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_405', 276 bytes spill stores, 276 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:24.453633: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_401', 276 bytes spill stores, 276 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:24.460749: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_403', 276 bytes spill stores, 276 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:24.902061: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_401', 160 bytes spill stores, 276 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:29:25.203069: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_403', 156 bytes spill stores, 268 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:45.800495: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_21', 104 bytes spill stores, 116 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:45.821886: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_21', 164 bytes spill stores, 172 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:45.897427: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_21', 152 bytes spill stores, 152 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:46.323785: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_28', 12 bytes spill stores, 12 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:46.328016: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_28', 164 bytes spill stores, 172 bytes spill loads\n",
-      "\n",
-      "2025-04-28 01:33:46.670352: I external/local_xla/xla/stream_executor/cuda/subprocess_compilation.cc:346] ptxas warning : Registers are spilled to local memory in function 'gemm_fusion_dot_28', 132 bytes spill stores, 132 bytes spill loads\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([12.306204795837402],\n",
-       " id\n",
-       " 9         40.729813\n",
-       " 10        67.589607\n",
-       " 17        70.504982\n",
-       " 24        56.888653\n",
-       " 28        37.628918\n",
-       "             ...    \n",
-       " 749987    73.425262\n",
-       " 749991    45.838665\n",
-       " 749995    55.898476\n",
-       " 749997    15.409703\n",
-       " 749999    14.105239\n",
-       " Length: 150000, dtype: float32)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv_tgt2(hparams, nn_adapter, test_run = True, use_gpu = True)"
    ]
@@ -710,9 +669,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd44f41b-af89-4018-8899-d6db6166fddc",
+   "metadata": {},
+   "source": [
+    "# Ensemble 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dcf459db-27dc-48c5-815e-00961d8112fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.916032568369"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_mean_squared_error(\n",
+    "    df_train[target],\n",
+    "    pd.concat([prd_oof_lgb, prd_oof_xgb, prd_oof_cb], axis=1).dot([0.6, 0.3, 0.1])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6bb7e162-5ba7-4174-a553-639766b413fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = sc.read_result(\"cb1\")\n",
+    "predictor = sgml.assemble_predictor(**result[0], config = config, spec = result[1])\n",
+    "prd_cb = predictor(\n",
+    "    dproc.join_and_assign(\n",
+    "        df_test.rename(columns = {'Episode_Title': 'ET', 'Genre': 'G'}), \n",
+    "        df_tgt_test.rename(columns = lambda x: x.replace(',', '_'))\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "47a94055-4441-437d-ba5d-0847983a014a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(pd.concat([\n",
+    "    prd_lgb2_2, prd_xgb2, prd_cb\n",
+    "], axis=1).dot([0.6, 0.3, 0.1])).rename(target).to_csv('result/submission11.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfd5ae0-5175-49d9-9791-4118c67a3194",
+   "id": "d27dbdd0-0286-4ec0-a511-8e951fa0fbb9",
    "metadata": {},
    "outputs": [],
    "source": []
