--- a/kaggle/PGS5/PGS5_ep4/3-4.Machine Learning4.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/3-4.Machine Learning4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "882eb0d8-d1a3-4899-83e8-c60b8360b847",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "db601d2e-0ad0-4d1b-b78e-e6f7d772b1e5",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "867a0d1a-7f2b-4992-8c8c-b3e36af22d84",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f5a29764-efd8-4dc8-8301-cda03c8d0928",
    "metadata": {},
    "outputs": [],
@@ -121,8 +121,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "542cf623-4342-49b6-ad92-ed4c15df57fe",
+   "metadata": {},
+   "source": [
+    "- 선형 모델의 잔차를 타겟으로 하는 모델을 만듭니다.\n",
+    "- 이를 위해 Feature Engineering에서 Target Encoding을 위한 속성 선택 과정에서 도출한 변수를 사용합니다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "204dc974-16f2-438a-aff7-50f5c9fc9c24",
    "metadata": {},
    "outputs": [],
@@ -162,115 +171,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "47099473-9afb-4194-be51-0eb829ad78ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations \n",
-    "encode_columns = ['Episode_Length_minutes', 'Episode_Title', 'Host_Popularity_percentage', 'Number_of_Ads', 'Episode_Sentiment', 'Publication_Day', 'Publication_Time']\n",
-    "pair_size = [2, 3, 4]\n",
-    "X_tgt_sel = list()\n",
-    "for j in pair_size:\n",
-    "    X_tgt_sel.extend(\n",
-    "        [','.join(i) for i in combinations(encode_columns, j)]\n",
+    "X_tgt_sel, _ = sc.read_result('tgt_sel_resi2') # 속성 선택 과정을 통해 도출된 조합된 속성\n",
+    "from sklearn.preprocessing import TargetEncoder\n",
+    "\n",
+    "def tge_proc(df_train, df_valid):\n",
+    "    X_tgt_var = pd.Series(X_tgt_sel).str.split('__').explode().unique().tolist()\n",
+    "    tge = make_pipeline(\n",
+    "        sgpp.CatCombiner2(pd.Series(X_tgt_sel).str.split('__').tolist()), TargetEncoder()\n",
+    "    ).set_output(transform = 'pandas')\n",
+    "    return tge.fit_transform(df_train[X_tgt_var], df_train[resi]), tge.transform(df_valid[X_tgt_var])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "42965978-43fb-45d9-ad17-36d816d6de74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generating 0 Fold\n",
+      "generating 1 Fold\n",
+      "generating 2 Fold\n",
+      "generating 3 Fold\n",
+      "generating 4 Fold\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, (train_idx, valid_idx) in enumerate(kf.split(df_train_1[X_all], df_train_1[resi])):\n",
+    "    print(\"generating {} Fold\".format(i))\n",
+    "    sc.cache_result(\n",
+    "        'kf_sp_resi_{}'.format(i),\n",
+    "        lambda : tge_proc(df_train_1.iloc[train_idx], df_train_1.iloc[valid_idx]), rerun = 0\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "42965978-43fb-45d9-ad17-36d816d6de74",
+   "execution_count": 18,
+   "id": "1ff8f0dc-af51-49ae-a5f0-77d5aefd5adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cc = sgpp.CatCombiner2([['Episode_Length_minutes','Host_Popularity_percentage']])\n",
-    "df_train_1 = dproc.join_and_assign(df_train_1, cc.fit_transform(df_train_1))\n",
-    "df_test_1 = dproc.join_and_assign(df_test_1, cc.transform(df_test_1))"
+    "_ =sc.cache_result(\n",
+    "    'tgt_enc_resi', lambda : tge_proc(df_train_1, df_test_1), rerun = 0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "aeacd8ca-2b95-4102-a6fe-5d0281a00191",
+   "execution_count": 20,
+   "id": "89a0fc68-e43a-46d7-b3b2-64882670c4b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Podcast_Name',\n",
-       " 'Episode_Title',\n",
-       " 'Episode_Length_minutes',\n",
-       " 'Genre',\n",
-       " 'Host_Popularity_percentage',\n",
-       " 'Publication_Day',\n",
-       " 'Publication_Time',\n",
-       " 'Guest_Popularity_percentage',\n",
-       " 'Number_of_Ads',\n",
-       " 'Episode_Sentiment',\n",
-       " 'HP',\n",
-       " 'NAd',\n",
-       " 'ELm_na',\n",
-       " 'GPp_na',\n",
-       " 'ELm_sqrt',\n",
-       " 'ELm_num',\n",
-       " 'GP']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_all"
+    "def cv_tgt_resi(hparams, adapter, test_run = False, **argv):\n",
+    "    rmse_oof = list()\n",
+    "    prd_oof = list()\n",
+    "    for i, (train_idx, valid_idx) in enumerate(kf.split(df_train_1[X_all], df_train_1[target])):\n",
+    "        df_tgt_train, df_tgt_valid = sc.read_result('kf_sp_resi_{}'.format(i))\n",
+    "        result = sgml.train(\n",
+    "            dproc.join_and_assign(\n",
+    "                df_train_1.iloc[train_idx].rename(columns = {'Episode_Title': 'ET', 'Genre': 'G'}), \n",
+    "                df_tgt_train\n",
+    "            ), hparams, config2, adapter, **argv\n",
+    "        )\n",
+    "        predictor = sgml.assemble_predictor(**result[0], spec = result[1], config = config2)\n",
+    "        prd_oof.append(\n",
+    "            predictor(dproc.join_and_assign(\n",
+    "                df_train_1.iloc[valid_idx].rename(columns = {'Episode_Title': 'ET', 'Genre': 'G'}), \n",
+    "                df_tgt_valid\n",
+    "            ))\n",
+    "        )\n",
+    "        rmse_oof.append(\n",
+    "            root_mean_squared_error(df_train_1.iloc[valid_idx][resi], prd_oof[-1])\n",
+    "        )\n",
+    "        if test_run:\n",
+    "            break\n",
+    "    return rmse_oof, pd.concat(prd_oof).sort_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a896ef-7530-4430-9ed4-c19f0ecf9b9a",
+   "metadata": {},
+   "source": [
+    "# LGB3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "id": "8c31adaa-dcdb-4d2f-af44-25efa96fc1c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "hparams = {\n",
-    "    'model_params': {'num_leaves': 511, 'n_estimators': 1500, 'learning_rate': 0.03, 'colsample_bytree': 0.7, 'metric': 'rmse'},\n",
-    "    'X_cat': ['Podcast_Name', 'Episode_Title', 'Genre', 'Publication_Day', 'Publication_Time', 'Episode_Sentiment'],\n",
-    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num'],\n",
-    "    'X_tgt': ['Episode_Length_minutes_Host_Popularity_percentage'],\n",
+    "    'model_params': {'num_leaves': 255, 'n_estimators': 3000, 'learning_rate': 0.01, 'colsample_bytree': 0.7, 'metric': 'rmse'},\n",
+    "    'X_cat': ['Podcast_Name', 'ET', 'G', 'Publication_Day', 'Publication_Time', 'Episode_Sentiment'],\n",
+    "    'X_num': ['GP', 'HP', 'NAd', 'ELm_num'] + X_tgt_sel,\n",
     "    'validation_fraction': 0.1\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "id": "48704082-b653-4c7c-9a9e-8c8acea25ec9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f337bea5b044dc0a2ad127415236553",
+       "model_id": "d89085db1ec9488ba97bfc6570d91cde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fold:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2f99278137241ecb95439f7ece0ca52",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -281,24 +307,56 @@
      "output_type": "stream",
      "text": [
       "/home/sun9sun9/python312/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LGBMRegressor was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "/home/sun9sun9/python312/lib/python3.12/site-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but LGBMRegressor was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "result = sc.cache_result(\n",
-    "    \"cv_lgb4\", \n",
-    "    lambda : sgml.cv(df_train_1, ss, hparams, config2, lgb_adapter),\n",
+    "    \"cv_lgb3\", \n",
+    "    lambda : cv_tgt_resi(hparams, lgb_adapter, test_run = True),\n",
     "    rerun = True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "7766538e-77b5-4260-bb61-2481cb018cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([9.494932022843424],\n",
+       " id\n",
+       " 7        -11.925543\n",
+       " 11         2.764987\n",
+       " 12        -0.947146\n",
+       " 13        -5.415752\n",
+       " 15        10.825530\n",
+       "             ...    \n",
+       " 749986    -4.286009\n",
+       " 749988    -0.393125\n",
+       " 749993    -0.410707\n",
+       " 749995    -1.558802\n",
+       " 749997    -2.453536\n",
+       " Length: 132582, dtype: float64)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0393022e-721e-43d8-9965-e99408a4375b",
    "metadata": {},
    "outputs": [],
    "source": []
