--- a/kaggle/PGS5/PGS5_ep4/1-1.Data Wrangling.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/1-1.Data Wrangling.ipynb
@@ -2964,7 +2964,7 @@
    "id": "b22be287-a310-4a95-93f7-d4ddee5cbe2c",
    "metadata": {},
    "source": [
-    "- Episode_Length_minutes가 작을 수록 Episode_Length_minutes와 타겟같의 비율은 작습니다.\n",
+    "- Episode_Length_minutes가 작을 수록 Episode_Length_minutes와 타겟이 같을 비율은 작습니다.\n",
     "\n",
     "- Episode_Length_minutes의 sqrt를 넣어 봅니다."
    ]
@@ -3526,7 +3526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
