--- a/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/0. Submission.ipynb
@@ -27,6 +27,8 @@
     "|submission7_2.csv|LR3_2|3 Machine Learning3.ipynb|5-fold CV, RMSE: 12.85|12.879|기존 루틴의 문제를 찾아 냈습니다: Train과 Test\n",
     "|Submission10.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.918|11.85663|XGB2 + LGB2|\n",
     "|Submission11.csv|Ensemble|3 Machine Learning3-3.ipynb|5-fold CV, RMSE: 11.916|11.852|XGB2 + LGB2 + CB1|\n",
+    "|submission12.csv|Ensemble|2-5.Feature Engineering5.ipynb|Holdout: 0.75/0.25, RMSE: 11.892|11.816|XGB3 + XGB4 + XGB5 + LGB5 + LGB6|\n",
+    "|submission13.csv|Ensemble|2-5.Feature Engineering5.ipynb|Holdout: 0.75/0.25, RMSE: 11.892|11.77469|XGB3 + XGB4 + XGB5 + LGB5 + LGB6 + e1 + e2|\n",
     "에서 ELm과 GP의 결측치를 각각의 평균으로 대치했던 것이 문제였습니다.|"
    ]
   },
@@ -218,7 +220,7 @@
     }
    ],
    "source": [
-    "!kaggle competitions submit -c playground-series-s5e4 -f result/submission11.csv -m \"11\""
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission11.csv -m \"11\""
    ]
   },
   {
@@ -227,7 +229,19 @@
    "id": "294eda1a-6549-49de-ad58-0cf294ba43a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission12.csv -m \"12\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4ceb65-0003-4921-85d2-268be9da7ff2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !kaggle competitions submit -c playground-series-s5e4 -f result/submission13.csv -m \"13\""
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
