--- a/kaggle/PGS4/PGS4_ep9/1. Data Wrangling.ipynb
+++ b/kaggle/PGS4/PGS4_ep9/1. Data Wrangling.ipynb
@@ -42,7 +42,8 @@
     "    !unzip playground-series-s4e9.zip -d data\n",
     "    !rm playground-series-s4e9.zip\n",
     "    !kaggle datasets download taeefnajib/used-car-price-prediction-dataset\n",
-    "    !unzip used-car-price-prediction-dataset.zip -d data"
+    "    !unzip used-car-price-prediction-dataset.zip -d data\n",
+    "    !rm used-car-price-prediction-dataset.zip"
    ]
   },
   {
@@ -4760,7 +4761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
